# spgp

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  bitscan.h  buffer.h  byteswap.h  compiler.h  load.h  minmax.h  popcount.h  print.h  ptr.h  rotate.h  round.h  scan.h  types.h  unused.h  xor.h
src/common/src/: buffer.c  convert.c  convert.h  print.c  print.h  scan.c  varargs.h
src/common/tests/: test-print.c  test-scan.c  test.h
src/core/: CMakeLists.txt  algorithms.h  argparse.c  argparse.h  armor.c  armor.h  base64.c  base64.h  buffer.h  byteswap.h  ciphers.c  ciphers.h  crc24.c  crc24.h  crypto.c  crypto.h  dump.c  key.c  key.h  load.h  macros.h  minmax.h  mpi.c  mpi.h  packet.c  packet.h  packets.c  print.c  ptr.h  round.h  s2k.c  s2k.h  seipd.c  seipd.h  session.c  session.h  signature.c  signature.h  spgp.c  spgp.h  (+3 more)
src/core/app/: argparse.c  argparse.h  encrypt.c  generate.c  io.c  keyring.c  misc.c  packets.c  preferences.c  sign.c  spgp.c  spgp.h
src/core/include/: algorithms.h  armor.h  base64.h  buffer.h  byteswap.h  crypto.h  error.h  key.h  load.h  packet.h  pgp.h  popcount.h  ptr.h  s2k.h  seipd.h  session.h  signature.h  stream.h  unused.h
src/core/include/pgp/: algorithms.h  armor.h  base64.h  crc24.h  crypto.h  error.h  key.h  mpi.h  packet.h  pgp.h  s2k.h  seipd.h  session.h  signature.h  stream.h
src/core/lib/: armor.c  base64.c  crc24.c  crypto.c  error.c  key.c  mpi.c  packet.c  packets.c  print.c  s2k.c  seipd.c  session.c  signature.c  stream.c
src/crypto/: CMakeLists.txt
src/crypto/hash/: md5.c
src/crypto/include/: aes.h  argon2.h  aria.h  armor.h  base64.h  bignum-internal.h  bignum.h  bitscan.h  blake2.h  blowfish.h  buffer.h  byteswap.h  camellia.h  cast5.h  chacha20.h  cipher-algorithm.h  cipher.h  cmac.h  compiler.h  crc24.h  crypt.h  des.h  dh.h  drbg.h  dsa.h  ec.h  ecdsa.h  eddsa.h  hash-algorithm.h  hash.h  hkdf.h  hmac.h  idea.h  kas.h  kdf.h  kmac.h  kyber.h  mac.h  md5.h  minmax.h  (+15 more)
src/crypto/src/: CMakeLists.txt
src/crypto/src/armor/: armor.c  base64.c  crc24.c
src/crypto/src/bignum/: add.c  addsub.c  bignum.c  bytes.c  cmp.c  ctx.c  divmod.c  gcd.c  lcm.c  mod.c  mul.c  prime.c  rand.c  shift.c  sub.c
src/crypto/src/bignum/asm/generic/: add.c  cmp.c  div.c  mul.c  sub.c
src/crypto/src/bignum/asm/x86/: add.c  cmp.c  mul.c  sub.c
src/crypto/src/cipher/: aes.c  aria.c  blowfish.c  camellia.c  cast5.c  chacha20.c  cipher.c  des.c  idea.c  twofish.c
src/crypto/src/cipher/aead/: ccm.c  double-block.h  eax.c  gcm.c  kw.c  ocb.c  siv.c
src/crypto/src/cipher/modes/: cbc.c  cfb.c  ctr.c  ecb.c  ofb.c  padding.h
src/crypto/src/dh/: dh.c
src/crypto/src/dh/parameters/: ffdhe.h  modp.h
src/crypto/src/ec/: ec.c  edwards.c  key.c  oid.c  point.c  prime.c  x25519.c  x448.c
src/crypto/src/ec/curves/: binary.h  brainpool.h  edwards.h  montgomery.h  prime.h
src/crypto/src/hash/: blake2.c  hash.c  md5.c  ripemd.c  sha1.c  sha256.c  sha3.c  sha512.c  shake.c
src/crypto/src/kas/: dh.c  mqv.c
src/crypto/src/kdf/: argon2.c  hkdf.c  kdf.c  pbkdf2.c  scrypt.c
src/crypto/src/lattice/: kyber.c
src/crypto/src/mac/: cmac.c  hmac.c  kmac.c
src/crypto/src/public-key/: rsa.c
src/crypto/src/rand/: ctr-drbg.c  drbg.c  entropy-posix.c  entropy.c  hash-drbg.c  hmac-drbg.c
src/crypto/src/rand/entropy/: entropy-posix.c  entropy-windows.c  entropy-x86.c
src/crypto/src/signature/: dsa.c  ecdsa.c  eddsa.c
src/crypto/tests/: CMakeLists.txt
src/crypto/tests/bignum/: test-arithmetic.c  test-basic.c  test-gcd.c  test-mod.c  test-prime.c
src/crypto/tests/cipher/: test-aes.c  test-aria.c  test-blowfish.c  test-camellia.c  test-cast5.c  test-cbc.c  test-ccm.c  test-cfb.c  test-chacha20.c  test-ctr.c  test-des.c  test-eax.c  test-ecb.c  test-gcm.c  test-idea.c  test-kw.c  test-ocb.c  test-ofb.c  test-siv.c  test-twofish.c  test.h
src/crypto/tests/ec/: test-ec-key.c  test-ec-point.c  test-ecc.c  test-x25519.c  test-x448.c
src/crypto/tests/hash/: test-blake2.c  test-md5.c  test-ripemd.c  test-sha1.c  test-sha2.c  test-sha3.c  test-shake.c  test.h
src/crypto/tests/include/: test.h
src/crypto/tests/kdf/: test-argon2.c  test-hkdf.c  test-kdf.c  test-pbkdf2.c  test-scrypt.c
src/crypto/tests/mac/: test-cmac.c  test-hmac.c  test-kmac.c  test.h
src/crypto/tests/rand/: test-drbg.c
src/crypto/tests/signature/: test-dsa.c  test-ecdsa.c  test-eddsa.c  test-rsa-sig.c
src/crypto/validation/: CMakeLists.txt
src/crypto/validation/data/: blake2b.txt  blake2s.txt  camellia.txt  ec.txt  ed25519.txt  towfish.txt
src/crypto/validation/data/nist/: aes128.txt  aes192.txt  aes256.txt  ccm.txt  ctr-drbg.txt  ecdsa-sign.txt  ecdsa-verify.txt  hash-drbg.txt  hmac-drbg.txt  hmac.txt  kw.txt  kwp.txt  rsa-pkcs-sign.txt  rsa-pkcs-verify.txt  rsa-pss-verify.txt  sha-monte.txt  sha1.txt  sha224.txt  sha256.txt  sha3-224.txt  sha3-256.txt  sha3-384.txt  sha3-512.txt  sha384.txt  sha512-224.txt  sha512-256.txt  sha512.txt  shake-monte.txt  shake128.txt  shake256.txt  tdes.txt
src/crypto/validation/src/: blake2.c  hash.c
src/io/: CMakeLists.txt
src/io/include/: io.h  os.h  status.h
src/io/include/darwin/: os.h
src/io/include/linux/: io.h  os.h
src/io/include/posix/: os.h
src/io/include/win32/: io.h  nt.h  os.h  timestamp.h  types.h
src/io/src/: CMakeLists.txt
src/io/src/common/: io.c  status.c
src/io/src/linux/: syscalls.S
src/io/src/posix/: os.c  status.c
src/io/src/win32/: io.c  os.c  path.c  security.c  status.c
src/tls/: CMakeLists.txt
src/tls/include/: tls.h
src/tls/include/tls/: alert.h  algorithms.h  cs.h  error.h  extensions.h  grease.h  handshake.h  memory.h  print.h  record.h  types.h  version.h
src/tls/src/: alert.c  alert.h  algorithms.h  cs.c  extensions.c  handshake.c  handshake.h  record.c  record.h  tester.c  tls.h
src/x509/: CMakeLists.txt
src/x509/include/asn1/: error.h  tag.h
src/x509/include/x509/: algorithm.h  asn1.h  error.h  memory.h  oid.h  x509.h
src/x509/src/: asn1.c  certificate.c  oid.c  oid2str.c  tag.c
(+1 files in other folders)
