#[[
   Copyright (c) 2024 - 2025 Sibi Siddharthan

   Distributed under the MIT license.
   Refer to the LICENSE file at the root directory for details.
]]

include_directories(common)

add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(crypto)
add_subdirectory(io)
add_subdirectory(x509)
add_subdirectory(tls)
